Add tests for table content in generated pdfs for non-strategic lists