@@ -62,6 +62,7 @@ class UtLandsChamberDailyHearingListFileConverterTest {
     private static final String IMPORTANT_INFORMATION_MESSAGE = "Important information heading does not match";
     private static final String BODY_MESSAGE = "Body does not match";
     private static final String TABLE_HEADERS_MESSAGE = "Table headers does not match";
+    private static final String TABLE_CONTENT_MESSAGE = "Table content does not match";
 
     private final NonStrategicListFileConverter converter = new NonStrategicListFileConverter();
 
@@ -115,7 +116,7 @@ class UtLandsChamberDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Last updated 20 January 2025 at 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Important information");
 
@@ -143,6 +144,22 @@ class UtLandsChamberDailyHearingListFileConverterTest {
                 "Venue",
                 "Mode of hearing",
                 "Additional information"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(9)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:15am",
+                "12345",
+                "This is a case name",
+                "Judge A",
+                "Member A",
+                "Hearing type 1",
+                "Venue 1",
+                "Mode of hearing 1",
+                "Additional information 1"
             );
 
         softly.assertAll();
@@ -187,7 +204,7 @@ class UtLandsChamberDailyHearingListFileConverterTest {
             .as(LAST_UPDATED_DATE_MESSAGE)
             .isEqualTo("Diweddarwyd ddiwethaf 20 January 2025 am 9:30am");
 
-        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).get(0).text())
+        softly.assertThat(document.getElementsByClass(SUMMARY_TEXT_CLASS).getFirst().text())
             .as(IMPORTANT_INFORMATION_MESSAGE)
             .isEqualTo("Gwybodaeth bwysig");
 
@@ -216,6 +233,22 @@ class UtLandsChamberDailyHearingListFileConverterTest {
                 "Lleoliad",
                 "Math o Wrandawiad",
                 "Gwybodaeth ychwanegol"
+            );
+
+        softly.assertThat(document.getElementsByTag("td"))
+            .as(TABLE_CONTENT_MESSAGE)
+            .hasSize(9)
+            .extracting(Element::text)
+            .containsExactly(
+                "10:15am",
+                "12345",
+                "This is a case name",
+                "Judge A",
+                "Member A",
+                "Hearing type 1",
+                "Venue 1",
+                "Mode of hearing 1",
+                "Additional information 1"
             );
 
         softly.assertAll();
